# XenoMC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  cmdline.c  cmdline.h  config.in.h  log.c  log.h  main.c
